fixed alignment of social link name

--- a/src/components/social-icons.scss
+++ b/src/components/social-icons.scss
@@ -13,7 +13,11 @@
   float: right;
 }
 
-.img-right {
+
+.img-name {
+	display: flex;
+	flex-direction: column;
+	align-self: center;
 }
 
 @media (max-width: 768px) {
@@ -25,6 +29,7 @@
 	}
 
 	.img-name {
-		align-self: flex-end;
+		direction: rtl;	
 	}
+
 }
